# telegram-parts

./: Cargo.toml  lib.rs  readme.md
api/: client.rs  form.rs  payload.rs
types/: background.rs  bot.rs  business.rs  callback.rs  color.rs  contact.rs  dice.rs  forum.rs  game.rs  giveaway.rs  link.rs  location.rs  menu.rs  mod.rs  poll.rs  reaction.rs  response.rs  story.rs  update.rs  user.rs  venue.rs  web_app.rs  webhook.rs
types/chat/: action.rs  boost.rs  full_info.rs  id.rs  invite_link.rs  join_request.rs  location.rs  member.rs  message.rs  mod.rs  permissions.rs  photo.rs  sender_chat.rs  sticker_set.rs
types/file/: animation.rs  audio.rs  document.rs  mod.rs  photo.rs  video.rs  video_note.rs  voice.rs
types/inline_mode/: query.rs  web_app.rs
types/inline_mode/content/: contact.rs  invoice.rs  location.rs  mod.rs  text.rs  venue.rs
types/inline_mode/result/: article.rs  audio.rs  contact.rs  document.rs  game.rs  gif.rs  location.rs  mod.rs  mpeg4_gif.rs  photo.rs  raw.rs  sticker.rs  venue.rs  video.rs  voice.rs
types/media/: group.rs  paid.rs
types/media/input/: animation.rs  audio.rs  document.rs  mod.rs  photo.rs  video.rs
types/message/: command.rs  methods.rs  mod.rs  origin.rs  quote.rs  reply.rs  sender.rs
types/message/data/: mod.rs  raw.rs
types/passport/: data.rs  error.rs
types/payment/: checkout.rs  invoice.rs  mod.rs  order.rs  refund.rs  shipping.rs  transaction.rs
types/primitive/: boolean.rs  parse_mode.rs
types/reply/: parameters.rs
types/sticker/: input.rs  mask.rs  mod.rs  set.rs
types/text/: entities.rs  mod.rs
(+4 files in other folders)
